welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:6: error: not found: value estsurBiscuit
	if (estsurBiscuit) {
            ^