welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit:Int = 0
var nbPas:Int = 0
while(nbBiscuit!=4) {
	avance();
	if (estsurBiscuit) {
		nbBiscuit = nbBiscuit + 1
	}
	
}
